# message-sdk

./: README.md  pyproject.toml  requirements.txt
examples/: async_example.py  s3_example.py  sync_example.py
message-test/: readme.md
message_sdk/: __init__.py  message_sdk.py
mtds/: __init__.py  mtds.py  s3_client.py
mtds/common/: enums.py
